--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -1,9 +1,4 @@
 .controlPane {
-  /*
-    HACK: overflow horizontal should include white-space nowrap
-  */
-  overflow-x: auto;
-  white-space: nowrap;
   padding: 24px;
   /* Optical centering */
   padding-top: 18px;
@@ -20,7 +15,7 @@
 .title {
   margin: 0;
   /* Optical centering */
-  margin-bottom: 16px;
+  margin-bottom: -4px;
 }
 
 .metadata {
